--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "openai": "^5.10.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "sweetalert2": "^11.22.2"
   },
   "devDependencies": {
